<resources>
    <string name="app_name">YourYork</string>

    <string name="Schools">Schools</string>
    <string name="catchment">Catchment</string>
    <string name="crime">Crime</string>
    <string name="calling">Cold Calling</string>

    <string name="title_activity_maps">Map</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="CRIME">Crime</string>
    <string name="SCHOOL">School</string>
    <string name="COLD_CALLING">Cold Calling Zones</string>
    <string name="CATCHMENT">Catchment</string>
    <string name="PRIMARY">Primary School</string>
    <string name="SECONDARY">Secondary School</string>
    <string name="property_search">Property Search</string>
    <string name="search_results">Search Results</string>

    <string-array name="radius_array">
        <item>This area only</item>
        <item>Within 1/4 of a mile</item>
        <item>Within 1/2 of a mile</item>
        <item>Within 1 mile</item>
        <item>Within 2 miles</item>
        <item>Within 3 miles</item>
        <item>Within 4 miles</item>
        <item>Within 5 miles</item>
    </string-array>

    <string-array name="bedsMin_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="bedsMax_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="priceMin_array">
        <item>£ No Minimum</item>
        <item>£50,000</item>
        <item>£90,000</item>
        <item>£150,000</item>
        <item>£250,000</item>
    </string-array>

    <string-array name="priceMax_array">
        <item>£ No Maximum</item>
        <item>£50,000</item>
        <item>£90,000</item>
        <item>£150,000</item>
        <item>£250,000</item>
    </string-array>

    <string-array name="added_array">
        <item>Anytime</item>
        <item>Last 24 Hours</item>
        <item>Last 3 Days</item>
        <item>Last 7 Days</item>
        <item>Last 14 Days</item>
    </string-array>

</resources>
