<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/filter"
        android:title="@string/filter"
        android:orderInCategory="200"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="always">

        <menu>
            <group android:checkableBehavior="all">

                <item
                    android:id="@+id/primary"
                    android:title="Primary School"
                    android:checked="true"
                    android:orderInCategory="1" app:showAsAction="never"
                    android:icon="@drawable/ic_school_red_600_18dp"/>

                <item
                    android:id="@+id/secondary"
                    android:title="Secondary School"
                    android:checked="true"
                    android:orderInCategory="1" app:showAsAction="never"
                    android:icon="@drawable/ic_school_deep_purple_a700_18dp"/>

                <item
                    android:id="@+id/primaryCatchment"
                    android:title="Primary Catchment"
                    android:checked="false"
                    android:orderInCategory="2" app:showAsAction="never" />

                <item
                    android:id="@+id/secondaryCatchment"
                    android:title="Secondary Catchment"
                    android:checked="false"
                    android:orderInCategory="2" app:showAsAction="never" />

                <item
                    android:id="@+id/crime"
                    android:title="@string/crime"
                    android:checked="true"
                    android:orderInCategory="3" app:showAsAction="never" />

                <item
                    android:id="@+id/calling"
                    android:title="@string/calling"
                    android:checked="false"
                    android:orderInCategory="4" app:showAsAction="never" />

            </group>

        </menu>
    </item>

    <item android:id="@+id/search"
        android:title="@string/search"
        android:orderInCategory="199"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always" />
</menu>
